# weather

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  setup.py
src/: constants.py  container.py  entities.py  exceptions.py  main.py  settings.py  utils.py
src/database/: repository.py
src/database/redis/: cache.py
src/http/: client.py
src/ip/: repository.py  validator.py
src/pages/: __init__.py  index.py
src/pages/static/: 451.html  main.html  scripts.js  styles.css
src/weather/: repository.py  serializator.py
tests/: test_convertor.py  test_weather_request.py
