[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Ben Puls <mail@benpuls.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
punq = "^0.7.0"
redis = "^5.1.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
